# salsa

core/: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CTestScript.cmake  Doxyfile.in  FindGSL.cmake  Helpers.cmake  README  THIRD_PARTY  farsaBestPractice  farsaConfig.cmake.in  farsaOpenIssues  farsaRoadMap  salsaBestPractice  salsaConfig.cmake.in  salsaOpenIssues  salsaRoadMap  salsaversion.h  salsaversion.h.in  version.h
core/configuration/: CMakeLists.txt
core/configuration/include/: baseexception.h  component.h  componentandstatus.h  componentdescriptors.h  componentresource.h  componentui.h  configurationconfig.h  configurationexceptions.h  configurationhelper.h  configurationkey.h  configurationmanager.h  configurationnode.h  configurationobserver.h  configurationwidget.h  parametersfileloadersaver.h  typesdb.h
core/configuration/src/: component.cpp  componentdescriptors.cpp  componentresource.cpp  configurationhelper.cpp  configurationkey.cpp  configurationlibinitializer.cpp  configurationmanager.cpp  configurationnode.cpp  configurationobserver.cpp  inifilesupport.cpp  parametersfileloadersaver.cpp  typesdb.cpp  xmlfilesupport.cpp
core/configuration/test/: CMakeLists.txt  componentcreation_test.cpp  componentdescription_test.cpp  componentdescriptionwithdescriptors_test.cpp  configurationhelper_test.cpp  configurationkey_test.cpp  configurationmanager_test.cpp  configurationnode_test.cpp  configurationobserver_test.cpp  functioncallssequencerecorder_test.cpp  inifilesupport_test.cpp  parametersfileloadersaver_test.cpp  resources_test.cpp  testhierarchy.cpp  testhierarchy.h  testutils.cpp  testutils.h  typesdb_test.cpp  typesdbwithinterfaces_test.cpp
core/docs/: footer.html  header.html  main.dox
core/docs/style/: style.css
core/experiments/: CMakeLists.txt
core/experiments/docs/: main.dox
core/experiments/include/: arena.h  baseexperiment.h  baseexperimentgui.h  controller.h  controllerinputoutput.h  controlleriterator.h  epuckmotors.h  epucksensors.h  evonet.h  evonetiterator.h  evonetui.h  experimentsconfig.h  farsaplugin.h  kheperamotors.h  kheperasensors.h  marxbotmotors.h  marxbotsensors.h  motors.h  musclepair.h  neuralnetiterator.h  noisydevice.h  projector.h  renderworldwrapperwidget.h  robots.h  salsaplugin.h  sensors.h  total99resources.h  wheeledexperimenthelper.h
core/experiments/src/: arena.cpp  baseexperiment.cpp  baseexperimentgui.cpp  controller.cpp  controllerinputoutput.cpp  epuckmotors.cpp  epucksensors.cpp  evonet.cpp  evonetiterator.cpp  evonetui.cpp  experimentslibinitializer.cpp  kheperamotors.cpp  kheperasensors.cpp  marxbotmotors.cpp  marxbotsensors.cpp  motors.cpp  musclepair.cpp  neuralnetiterator.cpp  noisydevice.cpp  renderworldwrapperwidget.cpp  robots.cpp  sensors.cpp  total99resources.cpp  wheeledexperimenthelper.cpp
core/experiments/test/: CMakeLists.txt  experimentsdummy_test.cpp
core/ga/: CMakeLists.txt
core/ga/docs/: jonata.cpp  multiLearningAlgo.cpp  multiLearningAlgo.h  paolo.cpp  tomassino.cpp  tomassino.dia  xnes.cpp  xnes.h
core/ga/include/: evoalgo.h  evorobotga.h  evorobotgastatistics.h  evorobotintgenotype.h  gaconfig.h  gaevaluator.h  gaexceptions.h  genotypetophenotype.h
core/ga/src/: evoalgo.cpp  evorobotga.cpp  evorobotgastatistics.cpp  evorobotintgenotype.cpp  galibinitializer.cpp
core/ga/test/: CMakeLists.txt  evorobotgastatistics_test.cpp  evorobotintgenotype_test.cpp
core/ga_old/: CMakeLists.txt
core/ga_old/docs/: example1.dox  example2.dox  main.dox
core/ga_old/include/: gaconfig.h
core/ga_old/src/: galibinitializer.cpp
core/libpluginhelper/: CMakeLists.txt
core/libpluginhelper/include/: commandlineparser.h  pluginhelper.h
core/libpluginhelper/src/: commandlineparser.cpp  pluginhelper.cpp
core/libpluginhelper/test/: CMakeLists.txt  commandlineparser_test.cpp  headerparser_test.cpp  pluginregistrationcodegenerator_test.cpp
core/newga/: CMakeLists.txt
core/newga/include/: evoalgo.h  evoalgocomponent.h  evoalgotest.h  evoalgotestcurrent.h  evoalgotestindividual.h  evoalgotestrandom.h  experimentinput.h  experimentoutput.h  gaevaluator.h  genotype.h  genotypetester.h  hillclimberalgo.h  newgaconfig.h  robotexperiment.h  robotexperimentui.h  steadystatealgo.h  xnesalgo.h
core/newga/src/: evoalgocomponent.cpp  evoalgotest.cpp  evoalgotestcurrent.cpp  evoalgotestindividual.cpp  evoalgotestrandom.cpp  genotype.cpp  genotypetester.cpp  hillclimberalgo.cpp  newgalibinitializer.cpp  robotexperiment.cpp  robotexperimentui.cpp  steadystatealgo.cpp  xnesalgo.cpp
core/nnfw/: CMakeLists.txt
core/nnfw/docs/: main.dox
core/nnfw/include/: backpropagationalgo.h  biasedcluster.h  cluster.h  copylinker.h  dotlinker.h  learningalgorithm.h  libcompetitivefunctions.h  liboutputfunctions.h  libperiodicfunctions.h  libradialfunctions.h  linker.h  matrixlinker.h  neuralnet.h  nnfwconfig.h  nnfwexceptions.h  normlinker.h  outputfunction.h  simplecluster.h  updatable.h
core/nnfw/src/: backpropagationalgo.cpp  biasedcluster.cpp  cluster.cpp  copylinker.cpp  dotlinker.cpp  learningalgorithm.cpp  libcompetitivefunctions.cpp  liboutputfunctions.cpp  libperiodicfunctions.cpp  libradialfunctions.cpp  linker.cpp  matrixlinker.cpp  neuralnet.cpp  nnfwlibinitializer.cpp  normlinker.cpp  simplecluster.cpp  updatable.cpp
core/nnfw/ui/: neuralnetconfwidget.cpp  neuralnetconfwidget.h  neuralnetui.cpp  neuralnetui.h
core/oldga/: CMakeLists.txt
core/oldga/docs/: example2.dox
core/oldga/include/: gaconfig.h
core/oldga/src/: galibinitializer.cpp
core/pluginhelper/: CMakeLists.txt
core/pluginhelper/src/: main.cpp
core/tests/: testPlugin.py
core/total99/: CMakeLists.txt
core/total99/conf/: total99.ini
core/total99/docs/: main.dox
core/total99/include/: batchinstancesmanager.h  genericgroupeditor.h  groupstreeeditor.h  parametereditorsfactory.h  projectmanager.h  viewersmanager.h
core/total99/src/: main.cpp  (+6 more)
core/utilities/: CMakeLists.txt
core/worldsim/: CMakeLists.txt  CMakeLists_precompiledNewton.txt  CMakeLists_sourceNewton.txt
plugins/testplugin/: CMakeLists.txt
(+247 files in other folders)
